--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.example.santhosh.travellocator"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -13,9 +13,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-    <permission      android:name="com.example.santhosh.travellocator.permission.C2D_MESSAGE"
+    <permission
+        android:name="com.example.santhosh.travellocator.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="com.example.santhosh.ubercaranimation.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="com.example.santhosh.ubercaranimation.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -40,20 +41,19 @@
             android:name="com.example.santhosh.travellocator.views.MapsActivity"
             android:label="@string/title_activity_maps">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name="com.noknok.android.client.asm.authui.fps.FpActivity"
-            android:screenOrientation = "portrait"
-            tools:replace = "android:screenOrientation"
-            android:windowSoftInputMode = "stateHidden|adjustPan"
-            android:noHistory = "true"
-            android:excludeFromRecents = "true"
-            android:configChanges = "orientation|screenSize">
-        </activity>
+            android:configChanges="orientation|screenSize"
+            android:excludeFromRecents="true"
+            android:noHistory="true"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            tools:replace="android:screenOrientation"></activity>
 
     </application>
 
